hiding overflow in gallery and fixing project page width

--- a/mainStyles.css
+++ b/mainStyles.css
@@ -331,6 +331,7 @@ footer {
   position:absolute;
   left:0px;
   bottom:100wh;
+  overflow-x:hidden;
 }
 
 /* || Responsive Styles || */
